Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.ronakbuilds.com" target="_blank">Blog <i class="fas fa-external-link-alt fa-xs"></i></a></li>
         <li class="nav-item ms-lg-3">
-          <a href="/path-to-your-resume.pdf" download class="btn btn-custom btn-sm">
+          <a href="/ronaks_resume.pdf" download class="btn btn-custom btn-sm">
             <i class="fas fa-download me-2"></i>Resume
           </a>
         </li>
@@ -383,7 +383,7 @@
     <h2 class="fw-bold mb-4">Let's build something great.</h2>
     <div class="d-flex justify-content-center gap-3 mb-5">
       <a href="mailto:ronakkhandlwl@gmail.com" class="btn btn-custom">Get in Touch</a>
-      <a href="/path-to-your-resume.pdf" download class="btn btn-outline-custom">Download Resume</a>
+      <a href="/ronaks_resume.pdf" download class="btn btn-outline-custom">Download Resume</a>
     </div>
     
     <div class="social-links mb-3">
