Resolve paths issues

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
          <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.ronakbuilds.com" target="_blank">Blog <i class="fas fa-external-link-alt fa-xs"></i></a></li>
         <li class="nav-item ms-lg-3">
-          <a href="/path-to-your-resume.pdf" download class="btn btn-custom btn-sm">
+          <a href="/ronaks_resume.pdf" download class="btn btn-custom btn-sm">
             <i class="fas fa-download me-2"></i>Resume
           </a>
         </li>
@@ -295,7 +295,7 @@
       <div class="col-lg-5 offset-lg-1 order-1 order-lg-2 mb-5 mb-lg-0">
           <div class="hero-image-container">
               <div class="hero-image-bg"></div>
-              <img src="/path/to/your/image_3.png" alt="Ronak Khandelwal" class="hero-image img-fluid">
+              <img src="/IMG_20251231_084940.jpg" alt="Ronak Khandelwal" class="hero-image img-fluid">
           </div>
       </div>
 
@@ -540,7 +540,7 @@
     <h2 class="fw-bold mb-4">Let's build something great.</h2>
     <div class="d-flex justify-content-center gap-3 mb-5">
       [cite_start]<a href="mailto:ronakkhandlwl@gmail.com" class="btn btn-custom">Get in Touch [cite: 60]</a>
-      <a href="/path-to-your-resume.pdf" download class="btn btn-outline-custom">Download Resume</a>
+      <a href="/ronaks_resume.pdf" download class="btn btn-outline-custom">Download Resume</a>
     </div>
     
     <div class="social-links mb-3">
