Update hero image source in index.html

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
       <div class="col-lg-5 offset-lg-1 order-1 order-lg-2 mb-4 mb-lg-0">
         <div class="hero-image-container">
           <div class="hero-image-bg"></div>
-          <img src="/IMG_20251231_084940.jpg" alt="Ronak Khandelwal" class="hero-image img-fluid">
+          <img src="/ronaks_image.png" alt="Ronak Khandelwal" class="hero-image img-fluid">
         </div>
       </div>
     </div>
